--- a/backend/templates/supplier/home.html
+++ b/backend/templates/supplier/home.html
@@ -2,5 +2,26 @@
 {% block content %}
     <div class="container">
         <h1 class="mt-3">Supplier Details</h1>
+        <h3 class="mt-3">Available Suppliers</h3>
+        <table class="table" class='table'>
+            <thead>
+                <tr>
+                  <th>Supplier</th>
+                  <th>Region</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for supplier in suppliers %}
+                    <tr>
+                        <td>{{supplier.supplier_name}}</td>
+                        <td>{{supplier.region.region_code}}</td>
+                    </tr>
+                {% endfor %}
+              </tbody>
+        </table>
     </div>
+{% endblock %}
+
+{% block custom_javascript %}
+
 {% endblock %}
