--- a/backend/templates/supplier/home.html
+++ b/backend/templates/supplier/home.html
@@ -1,23 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container">
-        <h1 class="mt-3">Supplier Details</h1>
+    <div class="container mt-5 mb-5">
+        <h1 class="mt-5" style="margin-top: 100px!important;">Supplier Details</h1>
         <h3 class="mt-3">Available Suppliers</h3>
-        <table class="table" class='table'>
-            <thead>
-                <tr>
-                  <th>Supplier</th>
-                  <th>Region</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for supplier in suppliers %}
-                    <tr>
-                        <td>{{supplier.company.company_name}}</td>
-                        <td>{{supplier.region.region_code}}</td>
-                    </tr>
+        <form method='GET' action='/'>
+          <div class="mb-3 d-flex justify-content-between">
+            <select class="form-select form-control" aria-label="Region" name="region">
+                <option value="" disabled selected hidden>Open this select region</option>
+                {% for region in regions %}
+                  <option value="{{region.id}}">{{region.region_code}}</option>
                 {% endfor %}
-              </tbody>
-        </table>
+            </select><button class="btn btn-success" type="submit">Filter</button>
+        </div>
+        </form>
+        <div class="text-center">
+          {% for company in companies %}
+              <a class=" mt-1 mr-2 badge badge-pill badge-primary text-white">{{company.company_name}}</a>
+          {% endfor %}
+        </div>
     </div>
 {% endblock %}
