--- a/backend/templates/supplier/home.html
+++ b/backend/templates/supplier/home.html
@@ -15,7 +15,7 @@
         </form>
         <div class="text-center">
           {% for company in companies %}
-              <a class=" mt-1 mr-2 badge badge-pill badge-primary text-white">{{company.company_name}}</a>
+              <a href="/companyData/{{company.id}}/" class=" mt-1 mr-2 badge badge-pill badge-primary text-white">{{company.company_name}}</a>
           {% endfor %}
         </div>
     </div>
