Historical data visualisation added

--- a/backend/templates/sidebar.html
+++ b/backend/templates/sidebar.html
@@ -8,6 +8,14 @@
                         <i class="fas fa-home"></i>
                         <p>DashBoard</p>
                     </a>
+                    <a  href="/insights">
+                        <i class="fas fa-line-chart"></i>
+                        <p>Insights</p>
+                    </a>
+                    <a  href="/history">
+                        <i class="fas fa-fa-history"></i>
+                        <p>History</p>
+                    </a>
                 </li> 
                 <li class="nav-section">
                     <span class="sidebar-mini-icon">
