predict page added

--- a/backend/templates/sidebar.html
+++ b/backend/templates/sidebar.html
@@ -16,6 +16,10 @@
                         <i class="fas fa-fa-history"></i>
                         <p>History</p>
                     </a>
+                    <a  href="/fetch">
+                        <i class="fas fa-fa-history"></i>
+                        <p>Predict</p>
+                    </a>
                 </li> 
                 <li class="nav-section">
                     <span class="sidebar-mini-icon">
