--- a/backend/templates/insights/insights_page.html
+++ b/backend/templates/insights/insights_page.html
@@ -20,7 +20,7 @@
                         <div class="col-7 col-stats">
                             <div class="numbers">
                                 
-                                <h8 class="card-title">YOUR INSIGHTS</h8>
+                                <h8 class="card-title">COMPANY HISTORY</h8>
                                 
                             </div>
                         </div>
@@ -31,7 +31,7 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">POEM Score Insights</div>
+                            <div class="card-title">Average Cost</div>
                         </div>
                         <div class="card-body">
                             <div class="chart-container">
@@ -43,7 +43,7 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">Track Your Sleep</div>
+                            <div class="card-title">Rating</div>
                         </div>
                         <div class="card-body">
                             <div class="chart-container">
@@ -82,69 +82,8 @@
             </div>
             
             
-            <div class="container mt-3 card">
-                <div class="card-header text-center">
-                    <div class="card-title">Ecze Image Analysis</div>
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                                <div class="carousel-inner">
-                                    {% for image in images %}
-                                        {% if forloop.first %}
-                                            <div class="carousel-item active">
-                                                <img class="d-block w-100" src="{{image}}" alt="First slide">
-                                            </div>
-                                        {% else %}
-                                            <div class="carousel-item">
-                                                <img class="d-block w-100" src="{{image}}" alt="Second slide">
-                                            </div>
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
-                                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                  <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                  <span class="sr-only">Next</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
-                                <div class="carousel-inner">
-                                    {% for image, score in masks %}
-                                        {% if forloop.first %}
-                                            <div class="carousel-item active">
-                                                <img class="d-block w-100" src="{{image}}" alt="First slide">
-                                                <h5 class="text-center mt-1"><mark>Severity Score</mark></h5>
-                                                <p class="text-center mt-1"><mark>{{score}}</mark></p>                                        
-                                            </div>
-                                        {% else %}
-                                            <div class="carousel-item">
-                                                <img class="d-block w-100" src="{{image}}" alt="Second slide">
-                                                <h5 class="text-center mt-1"><mark>Severity Score</mark></h5>
-                                                <p class="text-center mt-1"><mark>{{score}}</mark></p> 
-                                            </div>
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
-                                <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
-                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                  <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
-                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                  <span class="sr-only">Next</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
+                
             
             
         </div>
@@ -167,10 +106,10 @@
         var myLineChart = new Chart(lineChart, {
             type: 'line',
             data: {
-                labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+                labels: ["2016", "2017", "2018", "2019", "2020", "2021"],
                 //labels : {{labels}},
                 datasets: [{
-                    label: "Poem Score",
+                    label: "Average Cost",
                     borderColor: "#1d7af3",
                     pointBorderColor: "#FFF",
                     pointBackgroundColor: "#1d7af3",
@@ -181,7 +120,7 @@
                     backgroundColor: 'transparent',
                     fill: true,
                     borderWidth: 2,
-                    data: [10,20,30,40,10,20,30,40,10,20,30,40],
+                    data: {{avg_cost}},
                 }]
             },
             options : {
@@ -213,10 +152,10 @@
         var myLineChart2 = new Chart(lineChart2, {
             type: 'line',
             data: {
-                labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+                labels: ["2016", "2017", "2018", "2019", "2020", "2021"],
                 //labels : {{labels}},
                 datasets: [{
-                    label: "Sleep Score",
+                    label: "Rating",
                     borderColor: "#990e89",
                     pointBorderColor: "#FFF",
                     pointBackgroundColor: "#990e89",
@@ -227,7 +166,7 @@
                     backgroundColor: 'transparent',
                     fill: true,
                     borderWidth: 2,
-                    data: [10,20,30,40,10,20,30,40,10,20,30,40],
+                    data: {{rating}},
                 }]
             },
             options : {
