--- a/backend/templates/sidebar.html
+++ b/backend/templates/sidebar.html
@@ -12,6 +12,10 @@
                         <i class="fas fa-line-chart"></i>
                         <p>Insights</p>
                     </a>
+                    <a  href="/services">
+                        <i class="fas fa-line-chart"></i>
+                        <p>Services</p>
+                    </a>
                     <a  href="/history">
                         <i class="fas fa-fa-history"></i>
                         <p>History</p>
