--- a/backend/templates/supplier/predict.html
+++ b/backend/templates/supplier/predict.html
@@ -2,14 +2,9 @@
 {% block content %}
     <div class="container mt-5 mb-5">
         <h1 class="mt-5" style="margin-top: 100px!important;">Predict</h1>
-        <div class="card">
-            <label>Select Service</label>
-            <select class="form-select form-control" aria-label="Region" name="service" id="service">
-                {% for service in services %}
-                    <option value="{{service.id}}">{{service.service_name}}</option>
-                {% endfor %}
-            </select>
-            <input type="range" class="form-range" min="100" max="1000" value="150" step="1">
+        <iframe src="http://localhost:8501/" width="100%" height="500">
+            <p>Your browser does not support iframes.</p>
+          </iframe>          
         </div>
     </div>
 {% endblock %}
