--- a/backend/templates/insights/insights_page.html
+++ b/backend/templates/insights/insights_page.html
@@ -25,8 +25,7 @@
 								<i class="fa fa-dollar-sign"></i>
 							</span>
 							<div>
-								<h5 class="mb-1"><b><a href="#">132 <small>Sales</small></a></b></h5>
-								<small class="text-muted">12 waiting payments</small>
+								<h5 class="mb-1"><b><a href="#">132 <small>Clients</small></a></b></h5>
 							</div>
 						</div>
 					</div>
@@ -38,8 +37,7 @@
 								<i class="fa fa-shopping-cart"></i>
 							</span>
 							<div>
-								<h5 class="mb-1"><b><a href="#">78 <small>Orders</small></a></b></h5>
-								<small class="text-muted">32 shipped</small>
+								<h5 class="mb-1"><b><a href="#">78+<small>Ratings</small></a></b></h5>
 							</div>
 						</div>
 					</div>
@@ -52,7 +50,6 @@
 							</span>
 							<div>
 								<h5 class="mb-1"><b><a href="#">1,352 <small>Members</small></a></b></h5>
-								<small class="text-muted">163 registered today</small>
 							</div>
 						</div>
 					</div>
