--- a/backend/templates/services/services_page.html
+++ b/backend/templates/services/services_page.html
@@ -6,7 +6,7 @@
         
         <div class="text-center">
           {% for service in services %}
-              <a href="/service/{{service.id}}/" class=" mt-1 mr-2 badge badge-pill badge-primary text-white">{{service.service_name}}</a>
+              <a href="/service/{{service.id}}/" class="mt-1 mb-2 mr-2 ml-1 badge badge-pill badge-primary text-white" style="font-size: 20px;">{{service.service_name}}</a>
           {% endfor %}
         </div>
     </div>
